css and links added to stream two and three

--- a/stream-two.html
+++ b/stream-two.html
@@ -19,6 +19,46 @@
 
 
     <h1>Stream Two</h1>
-    <p>This project was written in Gitpod</p>
+    <div class="card">
+        <a href="https://en.wikipedia.org/wiki/Python_(programming_language)" target="_blank">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSOL1KsNNll-2ttFA9G2Dr_7qXs_80dHaA-Hg&usqp=CAU" alt="Python">
+            <h2>Python</h2>
+        </a>
+    </div>
+
+    <div class="card">
+        <a href="https://en.wikipedia.org/wiki/Flask_(web_framework)" target="_blank">
+            <img src="https://ih1.redbubble.net/image.2488655049.9084/st,small,507x507-pad,600x600,f8f8f8.jpg" alt="Flask_">
+            <h2>Flask_</h2>
+        </a>
+    </div>
+
+    <div class="card">
+        <a href="https://en.wikipedia.org/wiki/mongodb" target="_blank">
+            <img src="https://webimages.mongodb.com/_com_assets/cms/kuzt9r42or1fxvlq2-Meta_Generic.png" alt="mongodb">
+            <h2>Mongodb</h2>
+        </a>
+    </div>
+
+    <div class="card">
+        <a href="https://en.wikipedia.org/wiki/mysql" target="_blank">
+            <img src="https://www.cloudsavvyit.com/p/uploads/2017/07/ee83c456.png?height=200p&trim=2,2,2,2&crop=16:9" alt="mysql">
+            <h2>Mysql</h2>
+        </a>
+    </div>
+
+    <div class="card">
+        <a href="https://en.wikipedia.org/wiki/Git" target="_blank">
+            <img src="https://www.cloudsavvyit.com/p/uploads/2021/09/4d72a7db.png?width=1198&trim=1,1&bg-color=000&pad=1,1" alt="Git">
+            <h2>Git</h2>
+        </a>
+    </div>
+
+    <div class="card">
+        <a href="https://en.wikipedia.org/wiki/GitHub" target="_blank">
+            <img src="https://miro.medium.com/max/719/1*26XR2RfPsSmFd_Q6EA0SrA.png" alt="GitHub">
+            <h2>GitHub</h2>
+        </a>
+    </div>
 </body>
 </html>
